# projeto_agro

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README_en.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
airflow/dags/: main.py
airflow/metadata_airflow/base/16384/: 1247  1249  1249_fsm  1249_vm  1259  1259_fsm  1259_vm  16389  16397  16405  16413  16435  16445  16463  16481  16936  16936_fsm  16939  16940  16941  16943  16949  16950  16952  16953  16953_vm  16959  16960  16962  16963  16970  16971  16973  16974  16975  16975_fsm  16980  16981  16983  16984  (+201 more)
airflow/metadata_airflow/global/: 1260  1262  2671  pg_control  pg_internal.init
airflow/metadata_airflow/pg_stat/: pgstat.stat
airflow/metadata_airflow/pg_xact/: 0000
metabase/: metabase.db.mv.db  metabase.db.trace.db
scripts/: extract.py  landing.py  transform.py
scripts_sql/: create_struct_data.sql
terraform/: main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
terraform/.terraform/modules/: modules.json
