[tool.poetry]
name = "projeto-agro"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "projeto_agro"}]

[tool.poetry.dependencies]
python = "^3.8"
basedosdados = "^1.6.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
