[tool.poetry]
name = "projeto-agro"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "projeto_agro"}]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.12.0"
pylint = "^2.15.10"
isort = "^5.11.4"
kubernetes = "^25.3.0"
sqlalchemy = "^1.4.46"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
